syntax = "proto3";

package accountservice;

option go_package = "./proto";

service AccountService {
  rpc UnsubscribeAccount(UnsubscribeRequest) returns (UnsubscribeResponse) {}
}

message UnsubscribeRequest {
  int32 account_id = 1;
}

message UnsubscribeResponse {
  bool success = 1;
  string message = 2;
}